WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
200972
[GStreamer] Hole-punch build is broken
https://bugs.webkit.org/show_bug.cgi?id=200972
Summary
[GStreamer] Hole-punch build is broken
Philippe Normand
Reported
2019-08-21 03:17:54 PDT
I'm not landing the fix directly because I'm not sure it's the right approach.
Attachments
Patch
(2.71 KB, patch)
2019-08-21 03:23 PDT
,
Philippe Normand
zan
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2019-08-21 03:23:48 PDT
Created
attachment 376859
[details]
Patch
Zan Dobersek
Comment 2
2019-08-23 03:38:11 PDT
Comment on
attachment 376859
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=376859&action=review
> Source/WebCore/platform/graphics/texmap/TextureMapperPlatformLayerBuffer.h:72 > virtual void setVideoRectangle(const IntRect&) = 0; > - virtual ~HolePunchClient() = 0; > + virtual ~HolePunchClient() = default;
Nit: the destructor should be placed first.
Philippe Normand
Comment 3
2019-08-23 03:53:18 PDT
Committed
r249043
: <
https://trac.webkit.org/changeset/249043
>
Radar WebKit Bug Importer
Comment 4
2019-08-23 03:54:19 PDT
<
rdar://problem/54635405
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug