[GStreamer] Hole-punch build is broken https://bugs.webkit.org/show_bug.cgi?id=200972

Reviewed by Žan Doberšek.

This patch fixes link issues when building with
USE_GSTREAMER_HOLEPUNCH enabled, the hole punch client destructor
was missing.

* platform/graphics/gstreamer/MediaPlayerPrivateGStreamerBase.cpp:
Remove FAST_ALLOCATED annotation, because:
* platform/graphics/texmap/TextureMapperPlatformLayerBuffer.h:
it's now in the base class, along with a default destructor.

Canonical link: https://commits.webkit.org/214773@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@249043 268f45cc-cd09-0410-ab3c-d52691b4dbfc